--- a/day1/freeman.html
+++ b/day1/freeman.html
@@ -6,20 +6,21 @@
         <meta charset="utf-8">
         <title>God</title>
     </head>
+
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="http://classes.codingbootcamp.cz/assets/classes/2/style.css">
+   <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Open+Sans+Condensed:300" rel="stylesheet">
+    
     <body>
         
   <table border="1" >
-<h1>Morgan Freeman</h1>
-<h2>Biography</h2>
+<h1 class="h">Morgan Freeman</h1>
+<h2 class="h">Biography</h2>
+<h3 class="h">h3<h3>
 <hr>
 
  
 <div id="biography">
 
-    <span class="seen">seen</span>
-    <span class="unseen">unseen</p>
 
     <p class="red">
 With an authoritative voice and calm demeanor, this ever popular American actor has <a href="#">grown</a> into one of the most respected figures in modern US cinema. Morgan was born on <em>June 1, 1937</em> in Memphis, Tennessee, to Mayme Edna (Revere), a teacher, and Morgan Porterfield Freeman, a barber. The young lord Freeman attended <strong>Los Angeles City College</strong> before serving several years in the US Air Force as a mechanic between 1955 and 1959. His first dramatic arts exposure was on the stage including appearing in an all-African American production of the exuberant musical Hello, Dolly!.</p>
