--- a/day1/freeman.html
+++ b/day1/freeman.html
@@ -9,11 +9,11 @@
 
     <link rel="stylesheet" href="css/style.css">
    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Open+Sans+Condensed:300" rel="stylesheet">
-    
+    <link rel="icon" href="http://vignette3.wikia.nocookie.net/transformers-legends/images/6/64/Favicon.ico/revision/20121030153224" type="image/gif" sizes="16x16">
     <body>
         
   <table border="1" >
-<h1 class="h">Morgan Freeman</h1>
+<h1 class="h">Morgan Freeman<img src="http://media.salon.com/2014/06/morgan_freeman.jpg" width="1rem" height="1rem"></h1>
 <h2 class="h">Biography</h2>
 <h3 class="h">h3<h3>
 <hr>
@@ -59,7 +59,6 @@ Recently, Freeman appeared in <a href="http://www.imdb.com/title/tt1245526/" tar
 <img src="http://classes.codingbootcamp.cz/assets/classes/1/morgan-freeman.jpg" alt="Morgan Freeman" width="100" height="200"/>
 <img src="http://classes.codingbootcamp.cz/assets/classes/1/morgan-freeman.jpg" alt="Morgan Freeman" width="200" height="100"/>
 <img src="http://classes.codingbootcamp.cz/assets/classes/1/morgan-freeman.jpg" alt="Morgan Freeman" width="100" height="200"/>
-<img src="http://classes.codingbootcamp.cz/assets/classes/1/morgan-freeman.jpg" alt="Morgan Freeman" width="200" height="100"/>
 </a>
 </div>
 Author of Biography
