day 9 morning exercise

--- a/day9/index.html
+++ b/day9/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="dist/css/index.css">
 </head>
 <body>
-<h1>Excercise 1</h1>
+<h1>Excercise 12</h1>
+<p>paragraph</p>
+<p class="tip">paragraph</p>
 </body>
 </html>
